--- a/.gihub/workflows/release.yml
+++ b/.gihub/workflows/release.yml
@@ -13,7 +13,7 @@ jobs:
     - uses: actions/checkout@v2
 
     - name: Zip Folder
-      run: zip -r ${{ github.event.repository.name }}.zip ./Platforms/USA/_images
+      run: zip -r ${{ github.event.repository.name }}.zip ./Platforms/USA_heroes/_images
 
     - name: Release
       uses: softprops/action-gh-release@v1
