--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -13,25 +13,17 @@ jobs:
       - uses: actions/checkout@v3
 
       - name: Zip Folder
-        run: cd USA_heroes; zip -r USA_heroes.zip Platforms
+        run: cd USA_platforms; zip -r USA_platforms.zip Platforms
 
       - name: Zip Folder
-        run: cd USA_monsters; zip -r USA_monsters.zip Platforms
-
-      - name: Zip Folder
-        run: cd WORLD_heroes; zip -r WORLD_heroes.zip Platforms
-
-      - name: Zip Folder
-        run: cd WORLD_monsters; zip -r WORLD_monsters.zip Platforms
+        run: cd WORLD_platforms; zip -r WORLD_platforms.zip Platforms
 
       - name: Release
         uses: softprops/action-gh-release@v1
         if: startsWith(github.ref, 'refs/tags/')
         with:
           files: |
-            ./USA_heroes/USA_heroes.zip
-            ./USA_monsters/USA_monsters.zip
-            ./WORLD_heroes/WORLD_heroes.zip
-            ./WORLD_monsters/WORLD_monsters.zip
+            ./USA_platforms/USA_platforms.zip
+            ./WORLD_platforms/WORLD_platforms.zip
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
