--- a/.github/workflows/Release.yml
+++ b/.github/workflows/Release.yml
@@ -13,10 +13,10 @@ jobs:
       - uses: actions/checkout@v3
 
       - name: Zip Folder
-        run: zip -r Simple_platforms.zip ./Simple_JAPAN/Platforms
+        run: zip -r Simple_platforms.zip ./Simple_Japan/Platforms
 
       - name: Zip Folder
-        run: zip -r Simple_platforms.zip ./Simple_USA/Platforms
+        run: zip -r Simple_platforms.zip ./Simple_Usa/Platforms
         
       - name: Zip Folder
         run: zip -r Home_platforms.zip ./Home_USA/Platforms
